--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "postinstall": "npm run build",
+    "heroku-postbuild": "npm run build",
     "start": "node server.js"
   },
   "dependencies": {
